FIX align right the scrollUp

--- a/public/style.css
+++ b/public/style.css
@@ -39,9 +39,6 @@ footer {
 }
 
 #scrollUp {
-    /* position: fixed;
-    bottom : 100px;
-    right: 100px; */
     text-align: right;
     margin-right: 8%;
     margin-left: 8%;
